--- a/pago.html
+++ b/pago.html
@@ -12,8 +12,12 @@
     <script>
         paypal.HostedButtons({
             hostedButtonId: "SPKCP59YXSUDJ",
+            onApprove: function(data) {
+                window.location.href = "https://t.me/+8FljlEKQ-Ig3NDQ0";
+            }
         }).render("#paypal-container-SPKCP59YXSUDJ");
     </script>
 </body>
 </html>
+
 
