--- a/confirmacion.html
+++ b/confirmacion.html
@@ -11,7 +11,7 @@
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const token = urlParams.get('token');
-        const groupLink = `https://t.me/+qdjNrbgcLLFjNmY0?token=${token}`;
+        const groupLink = `https://t.me/+8FljlEKQ-Ig3NDQ0?token=${token}`;
         window.onload = function() {
             window.location.href = groupLink;
         };
