--- a/pago.html
+++ b/pago.html
@@ -13,7 +13,7 @@
         paypal.HostedButtons({
             hostedButtonId: "SPKCP59YXSUDJ",
             onApprove: function(data) {
-                window.location.href = "https://t.me/+qdjNrbgcLLFjNmY0";
+                window.location.href = "https://t.me/+8FljlEKQ-Ig3NDQ0";
             }
         }).render("#paypal-container-SPKCP59YXSUDJ");
     </script>
